Item text now properly aligned; Option menu no longer blocks cart content

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -6,35 +6,35 @@ body {
 }
 
 .btn-cart {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  padding: 6px;
-  border: 3px solid white;
-  border-radius: 100%;
-  color: white;
-  transition: all .2s ease-in-out;
-  z-index: 1;
-}
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    transition: all .2s ease-in-out;
 
-.btn-cart:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-}
+    padding: 6px;
+    border: 3px solid white;
+    border-radius: 100%;
+    color: white;
+
+    z-index: 1;
+  }
+
+  .btn-cart:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
 
 header {
+  width: 100%;
   background: $green1;
   height: 110px;
   
   h1 {
+    width: 70%;
     margin: 0px;
-    padding: 20px;
+    padding: 10px;
     font-size: 1.8em;
   }
-}
-
-.title {
-  padding-right: 50px;
 }
 
 .list-item {
@@ -88,6 +88,14 @@ header {
   width: 70px;
 }
 
+.list-item-price {
+  width: 80px;
+}
+
+.list-item-img {
+  width: 50px;
+}
+
 .list-item-in-cart {
   font-size: 2em;
   color: yellow;
@@ -122,7 +130,7 @@ header {
   top: 0px;
   left: 0px;
 
-  background: $purple4;
+  background: $purple3;
   display: none;
   width: 100%;
   height: 100%;
@@ -131,13 +139,8 @@ header {
     background: $purple3;
   }
 
-  .move-bottom {
-    width: 100%;
-    position: fixed;
-    bottom: 0px;
-  }
-
   .options {
+    width: 100%;
     display: flex;
     flex-direction: column;
     background: $purple3;
